--- a/package.json
+++ b/package.json
@@ -20,17 +20,27 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/barcode-scanner": "^4.18.0",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/qr-scanner": "^4.18.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "7.1.4",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-qrscanner": "2.6.0",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ngx-qrcode2": "0.0.9",
+    "phonegap-plugin-barcodescanner": "8.0.1",
     "qrcode": "^1.3.2",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "telemetry": "0.1.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -40,7 +50,16 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-qrscanner": {}
-    }
+      "cordova-plugin-qrscanner": {},
+      "phonegap-plugin-barcodescanner": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
